# qt-hello-world

./: CMakeLists.txt  main.cpp
.github/workflows/: buildWithQMake.yml  main.yml
